fix: make content images optimization at index and catalog page

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -89,6 +89,10 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/webp/catalog-2-desktop.webp 1x, img/webp/catalog-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-2-tablet.webp 1x, img/webp/catalog-2-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-2-mobile.webp 1x, img/webp/catalog-2-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1440px)" srcset="img/catalog-2-desktop.png 1x, img/catalog-2-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog-2-tablet.png 1x, img/catalog-2-tablet@2x.png 2x">
                 <img class="product__image product__image--big" src="img/catalog-2-mobile.png" srcset="img/catalog-2-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г">
@@ -128,6 +132,9 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-3-tablet.webp 1x, img/webp/catalog-3-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-3-mobile.webp 1x, img/webp/catalog-3-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" srcset="img/catalog-3-tablet.png 1x, img/catalog-3-tablet@2x.png 2x">
                 <img class="product__image product__image--3" src="img/catalog-3-mobile.png" srcset="img/catalog-3-mobile@2x.png 2x" alt="Cat Energy PRO 500 г">
               </picture>
@@ -166,9 +173,13 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog-4-desktop.png 1x, img/catalog-4-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog-4-tablet.png 1x, img/catalog-4-tablet@2x.png 2x">
-                <img class="product__image product__image--big" src="img/catalog-4-mobile.png" srcset="img/catalog-4-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/webp/catalog-4-desktop.webp 1x, img/webp/catalog-4-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-4-tablet.webp 1x, img/webp/catalog-4-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/webp/catalog-4-mobile.webp 1x, img/webp/catalog-4-mobile@2x.webp 2x">
+
+                  <source media="(min-width: 1440px)" srcset="img/catalog-4-desktop.png 1x, img/catalog-4-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog-4-tablet.png 1x, img/catalog-4-tablet@2x.png 2x">
+                  <img class="product__image product__image--big" src="img/catalog-4-mobile.png" srcset="img/catalog-4-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г">
               </picture>
             </a>
             <a class="product__title" href="#">
@@ -205,6 +216,9 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-5-tablet.webp 1x, img/webp/catalog-5-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-5-mobile.webp 1x, img/webp/catalog-5-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" srcset="img/catalog-5-tablet.png 1x, img/catalog-5-tablet@2x.png 2x">
                 <img class="product__image product__image--5" src="img/catalog-5-mobile.png" srcset="img/catalog-5-mobile@2x.png 2x" alt="Cat Energy PRO 500 г">
               </picture>
@@ -243,6 +257,10 @@
           <article class="product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/webp/catalog-6-desktop.webp 1x, img/webp/catalog-6-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-6-tablet.webp 1x, img/webp/catalog-6-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-6-mobile.webp 1x, img/webp/catalog-6-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1440px)" srcset="img/catalog-6-desktop.png 1x, img/catalog-6-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog-6-tablet.png 1x, img/catalog-6-tablet@2x.png 2x">
                 <img class="product__image product__image--big" src="img/catalog-6-mobile.png" srcset="img/catalog-6-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г">
@@ -282,6 +300,9 @@
           <article class="catalog__item product">
             <a class="product__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-7-tablet.webp 1x, img/webp/catalog-7-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/webp/catalog-7-mobile.webp 1x, img/webp/catalog-7-mobile@2x.webp 2x">
+
                 <source media="(min-width: 768px)" srcset="img/catalog-7-tablet.png 1x, img/catalog-7-tablet@2x.png 2x">
                 <img class="product__image product__image--7" src="img/catalog-7-mobile.png" srcset="img/catalog-7-mobile@2x.png 2x" alt="Cat Energy PRO 500 г">
               </picture>
@@ -429,6 +450,9 @@
         <div class="location__map">
           <iframe class="location__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" width="320" height="360" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <picture>
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/map-pin-desktop.webp 1x, img/webp/map-pin-desktop@2x.webp 2x">
+            <source type="image/webp" srcset="img/webp/map-pin-mobile.webp 1x, img/webp/map-pin-mobile@2x.webp 2x">
+
             <source media="(min-width: 768px)" srcset="img/map-pin-desktop.png 1x, img/map-pin-desktop@2x.png 2x">
             <img class="location__here" src="img/map-pin-mobile.png" srcset="img/map-pin-mobile@2x.png 2x" alt="Мы здесь">
           </picture>
