--- a/source/form.html
+++ b/source/form.html
@@ -179,6 +179,9 @@
         <div class="location__map">
           <iframe class="location__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <picture>
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/map-pin-desktop.webp 1x, img/webp/map-pin-desktop@2x.webp 2x">
+            <source type="image/webp" srcset="img/webp/map-pin-mobile.webp 1x, img/webp/map-pin-mobile@2x.webp 2x">
+
             <source media="(min-width: 768px)" srcset="img/map-pin-desktop.png 1x, img/map-pin-desktop@2x.png 2x">
             <img class="location__here" src="img/map-pin-mobile.png" srcset="img/map-pin-mobile@2x.png 2x" alt="Мы здесь">
           </picture>
