--- a/source/index.html
+++ b/source/index.html
@@ -228,26 +228,26 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
-            <!--<svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="file.svg#icon_logo_footer"></use>
-            </svg>-->
+            <!--<img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">-->
+            <svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
+              <use xlink:href="img/sprite.svg#footer-logo"></use>
+            </svg>
           </div>
 
           <div class="social">
             <a class="social__item" href="https://vk.com/htmlacademy" aria-label="Мы ВКонтакте">
               <svg class="social__icon" width="23" height="16" role="img">
-                <use xlink:href="img/file.svg#vk"></use>
+                <use xlink:href="img/sprite.svg#vkontakte-icon"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.instagram.com/htmlacademy/" aria-label="Мы в Инстаграм">
               <svg class="social__icon social__icon--ig" width="16" height="16" role="img">
-                <use xlink:href="img/file.svg#ig"></use>
+                <use xlink:href="img/sprite.svg#instagram-icon"></use>
               </svg>
             </a>
             <a class="social__item" href="https://www.facebook.com/htmlacademy" aria-label="Мы в Фейсбук">
               <svg class="social__icon social__icon--fb" width="22" height="22" role="img">
-                <use xlink:href="img/file.svg#fb"></use>
+                <use xlink:href="img/sprite.svg#facebook-icon"></use>
               </svg>
             </a>
           </div>
@@ -256,7 +256,7 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
               <svg class="copyright__logo" width="27" height="34" role="img">
-                <use xlink:href="img/file.svg#logo-academy"></use>
+                <use xlink:href="img/sprite.svg#htmlacademy-icon"></use>
               </svg>
             </a>
           </p>
