fix: edit svg-icon for changing color; edit styles of placeholder and error-status

--- a/source/form.html
+++ b/source/form.html
@@ -215,26 +215,25 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
-            <!--<svg width="128" height="24" viewBox="0 0 128 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="file.svg#icon_logo_footer"></use>
-            </svg>-->
+            <svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
+              <use xlink:href="img/sprite.svg#footer-logo"></use>
+            </svg>
           </div>
 
           <div class="social">
-            <a class="social__item" href="https://vk.com/htmlacademy">
-              <svg class="social__icon" width="23" height="16" role="img" aria-label="Мы ВКонтакте">
-                <use xlink:href="img/file.svg#vk"></use>
+            <a class="social__item" href="https://vk.com/htmlacademy" aria-label="Мы ВКонтакте">
+              <svg class="social__icon" width="23" height="16" role="img">
+                <use xlink:href="img/sprite.svg#vkontakte-icon"></use>
               </svg>
             </a>
-            <a class="social__item" href="https://www.instagram.com/htmlacademy/">
-              <svg class="social__icon social__icon--ig" width="16" height="16" role="img" aria-label="Мы в Инстаграм">
-                <use xlink:href="img/file.svg#ig"></use>
+            <a class="social__item" href="https://www.instagram.com/htmlacademy/" aria-label="Мы в Инстаграм">
+              <svg class="social__icon social__icon--ig" width="16" height="16" role="img">
+                <use xlink:href="img/sprite.svg#instagram-icon"></use>
               </svg>
             </a>
-            <a class="social__item" href="https://www.facebook.com/htmlacademy">
-              <svg class="social__icon social__icon--fb" width="22" height="22" role="img" aria-label="Мы в Фейсбук">
-                <use xlink:href="img/file.svg#fb"></use>
+            <a class="social__item" href="https://www.facebook.com/htmlacademy" aria-label="Мы в Фейсбук">
+              <svg class="social__icon social__icon--fb" width="22" height="22" role="img">
+                <use xlink:href="img/sprite.svg#facebook-icon"></use>
               </svg>
             </a>
           </div>
@@ -243,7 +242,7 @@
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               HTML Academy
               <svg class="copyright__logo" width="27" height="34" role="img">
-                <use xlink:href="img/file.svg#logo-academy-light"></use>
+                <use xlink:href="img/sprite.svg#htmlacademy-icon"></use>
               </svg>
             </a>
           </p>
