feat: add API-key to google maps; edit some mistakes

--- a/source/index.html
+++ b/source/index.html
@@ -2,30 +2,6 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <style>
-      HTML {
-        background-repeat: no-repeat;
-        background-position:  50% 0;
-        /* Mobile layout by default */
-        background-image: url("img/Mobile-index.jpg");
-      }
-      /* Tablet */
-      @media ( min-width: 768px ) {
-        HTML {
-          /* Tablet layout */
-          background-image: url("img/Tablet-index.jpg");
-        }
-      }
-      /* Desktop */
-      @media ( min-width: 1440px ) {
-        HTML {
-          /* Desktop layout */
-          background-image: url("img/Desktop-index.jpg");
-        }
-      }
-    </style>
-    <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
-    <script src="../node_modules/pixel-glass/script.js"></script>
     <link href="css/style.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
@@ -264,6 +240,6 @@
     </footer>
 
     <script src="js/script.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw8O6I9-V6YfWpCidCIDFucjbLx1ZUV7M&callback=initMap"></script>
   </body>
 </html>
