--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,30 +2,6 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <style>
-      HTML {
-        background-repeat: no-repeat;
-        background-position:  50% 0;
-        /* Mobile layout by default */
-        background-image: url("img/Mobile-catalog.jpg");
-      }
-      /* Tablet */
-      @media ( min-width: 768px ) {
-        HTML {
-          /* Tablet layout */
-          background-image: url("img/Tablet-catalog.jpg");
-        }
-      }
-      /* Desktop */
-      @media ( min-width: 1440px ) {
-        HTML {
-          /* Desktop layout */
-          background-image: url("img/Desktop-catalog.jpg");
-        }
-      }
-    </style>
-    <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
-    <script src="../node_modules/pixel-glass/script.js"></script>
     <link href="css/style.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
@@ -389,12 +365,14 @@
               Сахарозаменитель
             </h3>
 
-            <dt class="product__property">
-              1 упаковка (100 г)
-            </dt>
-            <dd class="product__value">
-              200 Р.
-            </dd>
+            <dl class="product__description">
+              <dt class="product__property">
+                1 упаковка (100 г)
+              </dt>
+              <dd class="product__value">
+                200 Р.
+              </dd>
+            </dl>
 
             <a class="button" href="#">
               Заказать
@@ -406,12 +384,14 @@
               Питьевая вода
             </h3>
 
-            <dt class="product__property">
-              5 литров
-            </dt>
-            <dd class="product__value">
-              50 Р.
-            </dd>
+            <dl class="product__description">
+              <dt class="product__property">
+                5 литров
+              </dt>
+              <dd class="product__value">
+                50 Р.
+              </dd>
+            </dl>
 
             <a class="button" href="#">
               Заказать
@@ -423,12 +403,14 @@
               Молоко
             </h3>
 
-            <dt class="product__property">
-              1 литр
-            </dt>
-            <dd class="product__value">
-              100 Р.
-            </dd>
+            <dl class="product__description">
+              <dt class="product__property">
+                1 литр
+              </dt>
+              <dd class="product__value">
+                100 Р.
+              </dd>
+            </dl>
 
             <a class="button" href="#">
               Заказать
@@ -440,12 +422,14 @@
               Витамины
             </h3>
 
-            <dt class="product__property">
-              1 упаковка (30 г)
-            </dt>
-            <dd class="product__value">
-              300 Р.
-            </dd>
+            <dl class="product__description">
+              <dt class="product__property">
+                1 упаковка (30 г)
+              </dt>
+              <dd class="product__value">
+                300 Р.
+              </dd>
+            </dl>
 
             <a class="button" href="#">
               Заказать
