--- a/source/index.html
+++ b/source/index.html
@@ -190,7 +190,7 @@
         </div>
 
         <div class="location__map">
-          <iframe class="location__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe class="location__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6194872569674!2d30.321109616096976!3d59.93845598187608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1605772073738!5m2!1sru!2sby"></iframe>
           <!--<picture>
             <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/map-pin-desktop.webp 1x, img/webp/map-pin-desktop@2x.webp 2x">
             <source type="image/webp" srcset="img/webp/map-pin-mobile.webp 1x, img/webp/map-pin-mobile@2x.webp 2x">
@@ -240,6 +240,6 @@
     </footer>
 
     <script src="js/script.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw8O6I9-V6YfWpCidCIDFucjbLx1ZUV7M&callback=initMap"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDw8O6I9-V6YfWpCidCIDFucjbLx1ZUV7M&callback=initMap"></script>-->
   </body>
 </html>
