--- a/source/form.html
+++ b/source/form.html
@@ -168,7 +168,7 @@
       <section class="location">
         <div class="location__card">
           <h2 class="location__title">
-            Приглашаем к сотрудничеству дилеров!
+            Приглашаем к&nbsp;сотрудничеству дилеров!
           </h2>
           <p class="location__text">
             ул. Большая Конюшенная, д. 19/8<br>
