pixel-perfect of form tablet up to footer

--- a/source/form.html
+++ b/source/form.html
@@ -171,8 +171,10 @@
             Приглашаем к&nbsp;сотрудничеству дилеров!
           </h2>
           <p class="location__text">
-            ул. Большая Конюшенная, д. 19/8<br>
-            Санкт-Петербург
+            ул. Большая Конюшенная, д. 19/8
+            <span class="location__span">
+              Санкт-Петербург
+            </span>
           </p>
         </div>
 
