make pixel-perfect of catalog mobile

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -245,7 +245,7 @@
                 Цена
               </dt>
               <dd class="product__value">
-                700 Р.
+                400 Р.
               </dd>
             </dl>
 
@@ -288,7 +288,7 @@
                 Цена
               </dt>
               <dd class="product__value">
-                1000 Р.
+                700 Р.
               </dd>
             </dl>
 
@@ -329,7 +329,7 @@
                 Цена
               </dt>
               <dd class="product__value">
-                700 Р.
+                500 Р.
               </dd>
             </dl>
 
@@ -439,7 +439,7 @@
 
         <div class="gift">
           <h2 class="gift__title">
-            Закажите все <br>и получите чехол для <br>кота в подарок!
+            Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!
           </h2>
         </div>
       </section>
@@ -449,11 +449,13 @@
       <section class="location">
         <div class="location__card">
           <h2 class="location__title">
-            Приглашаем к сотрудничеству дилеров!
+            Приглашаем к&nbsp;сотрудничеству дилеров!
           </h2>
           <p class="location__text">
-            ул. Большая Конюшенная, д. 19/8<br>
-            Санкт-Петербург
+            ул. Большая Конюшенная, д. 19/8
+            <span class="location__span">
+              Санкт-Петербург
+            </span>
           </p>
         </div>
 
