--- a/source/catalog.html
+++ b/source/catalog.html
@@ -439,7 +439,7 @@
 
         <div class="gift">
           <h2 class="gift__title">
-            Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!
+            Закажите все <br> и&nbsp;получите чехол для <br> кота в&nbsp;подарок!
           </h2>
         </div>
       </section>
