make pixel-perfect of catalog desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="logo__image" src="img/logo-mobile.svg" width="191" height="37" alt="Логотип Кэт Энерджи">
+            <img class="logo__image" src="img/logo-mobile.svg" alt="Логотип Кэт Энерджи">
           </picture>
         </a>
 
@@ -297,7 +297,7 @@
             </a>
           </article>
 
-          <article class="catalog__item product">
+          <article class="product">
             <a class="product__link" href="#">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/catalog-7-tablet.webp 1x, img/webp/catalog-7-tablet@2x.webp 2x">
