--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
             <picture>
               <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-              <img class="logo__image" src="img/logo-mobile.svg" width="191" height="37" alt="Логотип Кэт Энерджи">
+              <img class="logo__image" src="img/logo-mobile.svg" alt="Логотип Кэт Энерджи">
             </picture>
           </a>
 
