--- a/source/index.html
+++ b/source/index.html
@@ -181,11 +181,13 @@
       <section class="location location--index">
         <div class="location__card">
           <h2 class="location__title">
-            Приглашаем к сотрудничеству дилеров!
+            Приглашаем к&nbsp;сотрудничеству дилеров!
           </h2>
           <p class="location__text">
-            ул. Большая Конюшенная, д. 19/8<br>
-            Санкт-Петербург
+            ул. Большая Конюшенная, д. 19/8
+            <span class="location__span">
+              Санкт-Петербург
+            </span>
           </p>
         </div>
 
