--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="how-it-work__item how-it-work__item--time">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!
           </li>
         </ul>
       </section>
@@ -164,7 +164,7 @@
                 </div>
               </div>
 
-              <div class="example__range range">
+              <div class="range">
                 <p class="range__text">
                   Было
                 </p>
