pixel-perfect of block example

--- a/source/index.html
+++ b/source/index.html
@@ -143,25 +143,21 @@
           <div class="example__photoproove">
             <div class="example__wrapper-right">
               <div class="example__comparison">
-                <div class="example__before-wrapper">
-                  <picture>
-                    <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/before-desktop.webp 1x, img/webp/before-desktop@2x.webp 2x">
-                    <source type="image/webp" srcset="img/webp/before-mobile.webp 1x, img/webp/before-mobile@2x.webp 2x">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/before-desktop.webp 1x, img/webp/before-desktop@2x.webp 2x">
+                  <source type="image/webp" srcset="img/webp/before-mobile.webp 1x, img/webp/before-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/before-desktop.png 1x, img/before-desktop@2x.png 2x">
-                    <img class="example__photo-before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" alt="Фото Бориса до">
-                  </picture>
-                </div>
+                  <source media="(min-width: 768px)" srcset="img/before-desktop.png 1x, img/before-desktop@2x.png 2x">
+                  <img class="example__photo-before" src="img/before-mobile.png" srcset="img/before-mobile@2x.png 2x" alt="Фото Бориса до">
+                </picture>
 
-                <div class="example__after-wrapper">
-                  <picture>
-                    <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/after-desktop.webp 1x, img/webp/after-desktop@2x.webp 2x">
-                    <source type="image/webp" srcset="img/webp/after-mobile.webp 1x, img/webp/after-mobile@2x.webp 2x">
+                <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/webp/after-desktop.webp 1x, img/webp/after-desktop@2x.webp 2x">
+                  <source type="image/webp" srcset="img/webp/after-mobile.webp 1x, img/webp/after-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/after-desktop.png 1x, img/after-desktop@2x.png 2x">
-                    <img class="example__photo-after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" alt="Фото Бориса после">
-                  </picture>
-                </div>
+                  <source media="(min-width: 768px)" srcset="img/after-desktop.png 1x, img/after-desktop@2x.png 2x">
+                  <img class="example__photo-after" src="img/after-mobile.png" srcset="img/after-mobile@2x.png 2x" alt="Фото Бориса после">
+                </picture>
               </div>
 
               <div class="range">
@@ -210,9 +206,10 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
+            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
+            <!--<svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
               <use xlink:href="img/sprite.svg#footer-logo"></use>
-            </svg>
+            </svg>-->
           </div>
 
           <div class="social">
