make pixel-perfect of index-desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -474,9 +474,7 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
-              <use xlink:href="img/sprite.svg#footer-logo"></use>
-            </svg>
+            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
           </div>
 
           <div class="social">
