--- a/source/form.html
+++ b/source/form.html
@@ -60,7 +60,7 @@
                 <label class="form__label" for="cat_weight">
                   Вес (кг):<sup>*</sup>
                 </label>
-                <input class="form__input-text" type="number" name="cat-weight" id="cat_weight" placeholder="7" required>
+                <input class="form__input-text" type="number" name="cat-weight" id="cat_weight" min="0" placeholder="7" required>
               </div>
 
 
@@ -68,7 +68,7 @@
                 <label class="form__label" for="cat_age">
                   Возраст (лет):
                 </label>
-                <input class="form__input-text" type="number" name="cat-age" id="cat_age" placeholder="7">
+                <input class="form__input-text" type="number" name="cat-age" id="cat_age" min="0" placeholder="7">
               </div>
             </div>
 
@@ -110,7 +110,7 @@
                 <label class="form__label" for="phone">
                   Телефон:<sup>*</sup>
                 </label>
-                <input class="form__input-text form__input-text--phone" type="tel" name="owner-phone" id="phone" placeholder="8 (960) 900-60-90" required>
+                <input class="form__input-text form__input-text--phone" type="tel" pattern="8([0-9]{3})-[0-9]{3}-[0-9]{2}-[0-9]{3}" name="owner-phone" id="phone" placeholder="8 (960) 900-60-90" required>
               </div>
             </div>
           </div>
@@ -193,9 +193,7 @@
       <div class="footer__bottom">
         <div class="footer__wrapper">
           <div class="logo logo--footer">
-            <svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
-              <use xlink:href="img/sprite.svg#footer-logo"></use>
-            </svg>
+            <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
           </div>
 
           <div class="social">
