--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
             </picture>
           </a>
 
-          <nav class="navigation navigation--opened">
+          <nav class="navigation navigation--no-js">
             <button class="navigation__toggle" type="button">
               <span class="visually-hidden">Открыть меню</span>
             </button>
@@ -207,9 +207,6 @@
         <div class="footer__wrapper">
           <div class="logo logo--footer">
             <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Логотип Кэт Энерджи">
-            <!--<svg class="logo__image" width="128" height="24" role="img" aria-label="Логотип Кэт Энерджи">
-              <use xlink:href="img/sprite.svg#footer-logo"></use>
-            </svg>-->
           </div>
 
           <div class="social">
