--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="how-it-work__item how-it-work__item--time">
-            Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!
+            Уже через месяц наслаждайтесь изменениями к лучшему <span class="how-it-work__span"> вашего питомца!
           </li>
         </ul>
       </section>
