--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
           </picture>
         </a>
 
-        <nav class="navigation">
+        <nav class="navigation navigation--no-js">
           <button class="navigation__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
